vaapisink: Protect the X11 API invokations with proper locking

https://bugzilla.gnome.org/show_bug.cgi?id=739808